RDCC-5853: enabling Fortify Scan